--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="/assets/css/style.css">
         <title>Horeseon Marketing Agency - Web Accessible</title>
         <!-- Adjusted title above for better SEO -->
     </head>
