--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </p>
 
             <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="Cost management symbol"> 
+                <img src="./assets/images/cost-management.png" alt="Cost management symbol"/> 
                 <!-- Removed closing tag for img above -->
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.          
