--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <!-- Footer adjusted as section instead of class -->
         <footer> 
-            <h3>Made with ❤️️ by Horiseon. SEO by Malick Ba, Software Engineer.</h3>
+            <h3>Made with ❤️️ by Horiseon. Search Engine Optimization by Malick Ba, Software Engineer.</h3>
             <p>
                 &copy; 2022 Horiseon Social Solution Services, Inc. 
                 <!-- Updated year above -->
